--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 24px;
-  background-color: white;
+  background-color: #ffffff;
   font-size: 18px;
 }
 h1 {
