--- a/src/components/EducationSection/EducationSection.css
+++ b/src/components/EducationSection/EducationSection.css
@@ -1,4 +1,4 @@
-.work-experience {
+.education-wrapper {
   display: flex;
   margin: 12px 0;
 }
@@ -7,10 +7,13 @@ h2 {
   color: #075985;
   font-weight: 500;
 }
-.date {
+.education-date {
   font-size: 16px;
 }
 
 .tasks::-webkit-scrollbar {
   display: none;
+}
+.location {
+  font-size: 24px;
 }
