--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   font-size: 18px;
 }
 .cv-file {
-  height: 1123px;
+  min-height: 1123px;
   width: 794px;
   margin: 24px auto;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
